	  unmapped runlist region.  (Yura)
	- Make find work correctly on volumes mounted by ntfsmount.  (Yura)
	- Replaced all occurances of ENOTSUP to EOPNOTSUPP to be in better
	  harmony with the kernel driver.  (Szaka)
	- Fix ntfs_is_cb_compressed for nasty runlist merging case in which
	  compression block was incorrectly treated as not compressed.  (Yura)

20/07/2005 - 1.11.1 - Fix several ntfsmount bugs.

	- ntfsmount: Fix several bugs when too small buffer was allocated for
	  filenames on systems with utf8 locale.  (Yura, many thanks to Rich
	  for finding bug)

19/07/2005 - 1.11.0 - Fixes and a new utility ntfsmount, a FUSE ntfs module.

	- ntfscp: fix signal handling: handle both SIGTERM and SIGINT, print
	  correct message.  (Yura)
	- Update manual pages for ntfsprogs, ntfsclone, ntfsresize and 
	  ntfsfix.  (Szaka)
	- ntfsclone: detect and hint users if the destination fs does not
	  support sparse files.  (Szaka)
	- Fix memory management error in ntfs_inode_close.  (Yura)
	- Add new utility - ntfsmount.  It is a FUSE module that reles on
	  libntfs.  (Yura)
	- ntfsresize: support bad clusters list ($BadClus:$Bad), a.k.a. disks
	  having bad sectors if the new --bad-sectors option is used.  (Szaka)
	- ntfsinfo: Dump $EA_INFORMATION and $EA attributes.  (Yura)
	- mkntfs: Fix backup bootsector creation.  Thanks to Timur Amirkhanov
	  for pointing these stupidities out.  (We forgot to set the size
	  before doing it and we wrote more bytes then there were in the buffer
	  if sector size was above 8kiB and we only reserved one sector even
	  when sector size was less than 512 bytes and then we wrote 512 bytes,
	  i.e. beyond the end of the device.)  (Anton)
	- Add new utility (make extra) - ntfsdecrypt.  (Yuval)
	- Improve "already mounted" check.  (Yura)
	- Remove AC_FUNC_MALLOC and AC_FUNC_REALLOC from configure.ac as we
	  do not provide replacement functions for them and the checks break
	  cross compilation.  (Christophe)
