@@ -27,6 +27,8 @@ xx/xx/xxxx - 1.12.0-WIP
 	  harmony with the kernel driver.  (Szaka)
 	- Fix ntfs_is_cb_compressed for nasty runlist merging case in which
 	  compression block was incorrectly treated as not compressed.  (Yura)
+	- ntfsresize: fix for ntfs_rl_truncate() EIO: always set the correct
+	  size for $BadClus:$Bad, even if Windows set it incorrectly.  (Szaka)
 
 20/07/2005 - 1.11.1 - Fix several ntfsmount bugs.
 
